[gd_scene load_steps=3 format=3 uid="uid://7nf8fbsxbiyy"]

[ext_resource type="Script" path="res://HUD.gd" id="1_tfdh6"]
[ext_resource type="FontFile" uid="uid://b5ftjs8qctuy1" path="res://Micro5-Regular.ttf" id="2_xb2nt"]

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_tfdh6")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.0
offset_right = 22.0
offset_bottom = 65.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_xb2nt")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
uppercase = true

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.5
offset_top = -113.0
offset_right = 86.5
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_xb2nt")
theme_override_font_sizes/font_size = 64
text = "MESSAGE"

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -139.0
offset_top = -255.0
offset_right = 139.0
offset_bottom = -182.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_xb2nt")
theme_override_font_sizes/font_size = 64
text = "PLAY"
metadata/_edit_use_anchors_ = true

[node name="SubMessage" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.5
offset_top = -40.0
offset_right = 73.5
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_xb2nt")
theme_override_font_sizes/font_size = 36
text = "sub message"
horizontal_alignment = 1

[connection signal="pressed" from="StartButton" to="." method="_on_start_buton_pressed"]
